--- a/vagrant/VagrantFile
+++ b/vagrant/VagrantFile
@@ -11,6 +11,7 @@ if [ "" == "$neo4jinstalled" ]; then
 	wget -O - https://debian.neo4j.org/neotechnology.gpg.key | sudo apt-key add -
 	echo 'deb https://debian.neo4j.org/repo stable/' | sudo tee /etc/apt/sources.list.d/neo4j.list
 	sudo add-apt-repository ppa:webupd8team/java
+	curl -sL https://deb.nodesource.com/setup_8.x | sudo -E bash -
 	sudo apt-get update -y
 
 	echo debconf shared/accepted-oracle-license-v1-1 select true | sudo debconf-set-selections 
@@ -18,7 +19,7 @@ if [ "" == "$neo4jinstalled" ]; then
 	echo debconf neo4j/question select "I ACCEPT" | sudo debconf-set-selections
 	echo debconf neo4j/question seen true | sudo debconf-set-selections
 	sudo apt-get install oracle-java8-installer -y
-	sudo apt-get install neo4j -y --force-yes
+	sudo apt-get install neo4j build-essential nodejs -y --force-yes
 	service neo4j stop
 	echo Installing APOC plugins
 	cd /var/lib/neo4j/plugins
@@ -43,6 +44,7 @@ Vagrant.configure("2") do |config|
 	config.vm.hostname = "neo4j"
 	config.vm.box = "ubuntu/trusty64"		
 	config.vm.synced_folder "../data", "/data"
+	config.vm.synced_folder "../src", "/src"
 	config.vbguest.auto_update = true
 	config.vbguest.no_remote = false
 		
