--- a/src/api/package.json
+++ b/src/api/package.json
@@ -13,5 +13,8 @@
     "express": "~4.15.2",
     "hbs": "^4.0.1",
     "neo4j-driver": "^1.5.0"
+  },
+  "devDependencies": {
+    "nodemon": "^1.12.1"
   }
 }
