--- a/vagrant/VagrantFile
+++ b/vagrant/VagrantFile
@@ -53,6 +53,7 @@ Vagrant.configure("2") do |config|
 	end
 	
 	config.vm.network  "private_network", ip: '192.168.56.104'
+	config.vm.network "forwarded_port", guest: 3003, host: 3003, protocol: "tcp"
 	config.vm.network "forwarded_port", guest: 7473, host: 7473, protocol: "tcp"
 	config.vm.network "forwarded_port", guest: 7474, host: 7474, protocol: "tcp"
 	config.vm.network "forwarded_port", guest: 7687, host: 7687, protocol: "tcp"
