--- a/src/api/package.json
+++ b/src/api/package.json
@@ -15,7 +15,8 @@
     "hbs": "^4.0.1",
     "logger": "0.0.1",
     "nconf": "^0.9.1",
-    "neo4j-driver": "^1.5.0"
+    "neo4j-driver": "^1.5.0",
+    "underscore": "^1.8.3"
   },
   "devDependencies": {
     "jshint": "^2.9.5",
