--- a/src/api/package.json
+++ b/src/api/package.json
@@ -3,8 +3,9 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www",
-    "start-dev": "nodemon app.js"
+    "start": "forever start ./app.js",
+    "stop": "forever stop ./app.js",
+    "start-dev": "nodemon ./app.js"
   },
   "dependencies": {
     "bluebird": "^3.5.1",
@@ -19,6 +20,7 @@
     "underscore": "^1.8.3"
   },
   "devDependencies": {
+    "forever": "^0.15.3",
     "jshint": "^2.9.5",
     "mocha": "^4.0.1",
     "nodemon": "^1.12.1"
