--- a/src/api/package.json
+++ b/src/api/package.json
@@ -17,6 +17,7 @@
     "logger": "0.0.1",
     "nconf": "^0.9.1",
     "neo4j-driver": "^1.5.0",
+    "sharp": "^0.18.4",
     "underscore": "^1.8.3"
   },
   "devDependencies": {
