--- a/src/api/package.json
+++ b/src/api/package.json
@@ -22,6 +22,11 @@
   },
   "devDependencies": {
     "forever": "^0.15.3",
+    "grunt": "^1.0.1",
+    "grunt-contrib-clean": "^1.1.0",
+    "grunt-contrib-handlebars": "^1.0.0",
+    "grunt-nodemon": "^0.4.2",
+    "handlebars": "^4.0.11",
     "jshint": "^2.9.5",
     "mocha": "^4.0.1",
     "nodemon": "^1.12.1"
