--- a/src/api/package.json
+++ b/src/api/package.json
@@ -22,17 +22,8 @@
   },
   "devDependencies": {
     "forever": "^0.15.3",
-    "generator-ko": "^0.2.0",
-    "grunt": "^1.0.1",
-    "grunt-contrib-clean": "^1.1.0",
-    "grunt-contrib-handlebars": "^1.0.0",
-    "grunt-contrib-watch": "^1.0.0",
-    "grunt-express-server": "^0.5.3",
-    "grunt-nodemon": "^0.4.2",
-    "handlebars": "^4.0.11",
     "jshint": "^2.9.5",
     "mocha": "^4.0.1",
-    "nodemon": "^1.12.1",
-    "yo": "^2.0.0"
+    "nodemon": "^1.12.1"
   }
 }
