--- a/src/package.json
+++ b/src/package.json
@@ -16,5 +16,7 @@
     "grunt-express-server": "^0.5.3",
     "grunt-nodemon": "^0.4.2",
     "grunt-string-replace": "^1.3.1"
+  },
+  "dependencies": {
   }
 }
