--- a/src/api/package.json
+++ b/src/api/package.json
@@ -13,6 +13,7 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.3",
     "express": "~4.15.2",
+    "express-session": "^1.15.6",
     "hbs": "^4.0.1",
     "logger": "0.0.1",
     "nconf": "^0.9.1",
