--- a/src/api/package.json
+++ b/src/api/package.json
@@ -22,6 +22,7 @@
     "passport-google-oauth": "^1.0.0",
     "passport-google-oauth20": "^1.0.0",
     "sharp": "^0.18.4",
+    "sqlite3": "^3.1.13",
     "underscore": "^1.8.3"
   },
   "devDependencies": {
